Update quotation request flow (resolve bug with city and country in text format).

--- a/src/Acted/LegalDocsBundle/Resources/views/Email/create_event_notify.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Email/create_event_notify.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block body_html %}
     {% autoescape false %}
-        <p>I would like to enquire about your availability and price for our upcoming event in {{ event.city.name }}.</p>
+        <p>I would like to enquire about your availability and price for our upcoming event in {{ event.city }}.</p>
         <p>lease kindly find below more information about our event:</p>
         <br />
         <table>
