--- a/src/Acted/LegalDocsBundle/Resources/views/Default/quotationModal.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/quotationModal.html.twig
@@ -103,8 +103,12 @@
 <div class="modal success-quotation-modal fade" id="success-quotation-modal">
     <div class="modal-dialog" role="document">
         <div class="modal-body">
-            <div class="modal-content">
-                <p>epepwepw</p>
+            <div class="modal-content text-center">
+                <h4>Thank you!</h4>
+                <p>Your quotation has been sent!</p>
+                <div>
+                    <i class="fa fa-check" aria-hidden="true"></i>
+                </div>
             </div>
         </div>
     </div>
@@ -126,8 +130,8 @@
         <hr>
         <div>
             <div class="add-new-performance-container">
-                <button create-performance class="add-new-performance-btn">Add extra Act</button>
-                <button create-service class="add-new-performance-btn">Add a service</button>
+                <button create-performance class="add-new-performance-btn" status="adding">Add extra Act</button>
+                <button create-service class="add-new-performance-btn" status="adding">Add a service</button>
             </div>
             <div class="travel-exp-container">
                 <i>Includes travel expenses:</i>
