--- a/src/Acted/LegalDocsBundle/Resources/views/Default/quotationModal.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/quotationModal.html.twig
@@ -244,7 +244,7 @@
         var allData      = performances.concat(services);
 
     for(var i = 0; i < allData.length; i++) {
-        var isSelected = allData[i].isSelected;
+        var actSelected = allData[i].isSelected ? 'checked' : '';
         //var perfId = allData[i].id;
 
         var curPerf = null;
@@ -268,7 +268,7 @@
             <div class="row">
                 <div class="act-title">
                     <div class="custom-checkbox">
-                        <input select-performance id="performance_quot_<%=perfId%>" value="" name="quot-title-check" type="checkbox">
+                        <input select-performance id="performance_quot_<%=perfId%>" value="" name="quot-title-check" type="checkbox" <%=actSelected%> >
                         <label for="performance_quot_<%=perfId%>"></label>
                     </div>
                     <i class="act-name"><%=curPerf.title%></i>
@@ -299,7 +299,7 @@
                     <!-- Set options -->
                     <div option-id="<%=option.id%>" class="col-md-6 act-option">
                         <div class="custom-checkbox">
-                            <input select-option option-id="<%=option.id%>" id="option_<%=option.id%>" name="package-check" value="" type="checkbox" optionChecked>
+                            <input select-option option-id="<%=option.id%>" id="option_<%=option.id%>" name="package-check" value="" type="checkbox" <%=optionChecked%> >
                             <label for="option_<%=option.id%>"></label>
                         </div>
 
@@ -370,10 +370,10 @@
     </div>
 
     <div class="row add-comment-btn">
-        <a href="#" id="comment_toggle">Add a comment</a>
+        <a href="#" id="quotation_comment_toggle">Add a comment</a>
     </div>
 
-    <div class="col-lg-12 no-pad" id="comment_area" style="display: none;">
+    <div class="col-lg-12 no-pad" id="quotation_comment_area" style="display: none;">
         <textarea name="comment" class="quote-profile-desc" placeholder="Write a message to the Artist if you have any question about his performance or if you want to provide with more details about your event"></textarea>
     </div>
 
