--- a/src/Acted/LegalDocsBundle/Resources/views/Default/quotationModal.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/quotationModal.html.twig
@@ -199,9 +199,13 @@
                 <label for="quot_performance_time">Performance time</label>
                 <input type="text" class="form-control" id="quot_performance_time" placeholder="10 p.m." name="performance_time" <%=disabled%>>
             </div>
+            <%
+
+            console.log(data.model)
+             %>
             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 form-group">
                 <label for="quot_address">Address</label>
-                <input type="text" class="form-control" id="quot_address" placeholder="St Regis" name="address" value="<%=data.model.city.name%>" <%=disabled%>>
+                <input type="text" class="form-control" id="quot_address" placeholder="St Regis" name="address" value="<%=data.model.location%>" <%=disabled%>>
             </div>
         </div>
 
@@ -223,7 +227,7 @@
             </div>
 
             <div class="map-holder">
-                <img src="https://maps.googleapis.com/maps/api/staticmap?size=196x106&key=AIzaSyATENIG0m2xaOqvzz7M9CbOHRFVexb4LWw">
+                <img src="https://maps.googleapis.com/maps/api/staticmap?size=196x106&center=<%=data.model.location%>&key=AIzaSyATENIG0m2xaOqvzz7M9CbOHRFVexb4LWw">
             </div>
         </div>
 
