--- a/src/Acted/LegalDocsBundle/Resources/views/Default/quotationModal.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/quotationModal.html.twig
@@ -145,7 +145,7 @@
                 </div>
                 <div class="custom-checkbox">
                     <input id="expenses_quoted_above" name="expenses" type="radio">
-                    <label for="expenses_quoted_above>">Quoted above</label>
+                    <label for="expenses_quoted_above">Quoted above</label>
                 </div>
             </div>
         </div>
