--- a/src/Acted/LegalDocsBundle/Resources/public/css/parts/quotation.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/parts/quotation.css
@@ -326,6 +326,15 @@
     font-size: 14px;
 }
 
+.quotation-modal .custom-price {
+    height: 26px;
+    width: 69px;
+    border: 2px solid rgba(229, 229, 229, 1);
+    border-radius: 4px;
+    display: inline-block;
+    vertical-align: top;
+}
+
 @media screen and (max-width: 960px) {
     .quotation-modal .act-info,
     .quotation-modal .place-info {
