Added google maps key to config.yml. Resolve task AC-169. 15/11/2016 3:43 PM

--- a/src/Acted/LegalDocsBundle/Resources/views/Default/footer.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/footer.html.twig
@@ -67,7 +67,7 @@
     {% include 'ActedLegalDocsBundle:Default:registration.html.twig' %}
 {% endif %}
 <script src="{{ asset('js/javascript.js') }}"></script>
-<script src="http://maps.google.com/maps/api/js?language=en&libraries=places&key=AIzaSyDLK8SupBcU-H0H0SF0PIar5UP-y-DCrTI"></script>
+<script src="http://maps.google.com/maps/api/js?language=en&libraries=places&key={{googlemaps.key}}"></script>
 <script>
     jQuery.extend(jQuery.validator.messages, {
         required: "This field is required.",
